Revision history for perl distribution Convos

4.09 Not Released
 - Avoid hearing yourself locally through video chat
 - Fix accepting calls in private conversations
 - Fix rendering of main menu on small screens
 - Fix making the chat input field stand out on small screens

4.08 2020-05-23T15:32:00+0800
 - Add EXPERIMENTAL video support #204
 - Will send desktop notification on video call #472
 - Add support for parsing "ahq" user modes #471
 - Add "South" theme #469
   Contributor: Thibault Duponchelle
 - Fix not forgetting theme settings when browsere is closed
 - Fix how unread count is presented/calculated #470
 - Fix serving themes from correct URL behind reverse proxy
 - Fix button colors for all themes #467 #468
   Contributor: Thibault Duponchelle
 - Removed Nordaaker background on login screen #439

4.07 2020-05-15T09:39:00+0800
 - Fix "Go to start page" and "Retry" links inside <Fallback>
 - Fix markdown links to relative links will not refresh the page
 - Changed from "convos green" to red in the "High-contrast" theme #465
   Contributor: Thibault Duponchelle

4.06 2020-05-13T13:19:00+0800
 - Improved keeping scroll position
 - Fix loading embeds after the correct message

4.05 2020-05-10T10:06:00+0800
 - Avoid XSS links in the chat

4.04 2020-05-09T08:42:00+0800
 - Add "Jump to now" link in Chat #453
 - Add line numbers for hljs #461
 - Add support for searching for "from"
 - Add "Desert" theme
 - Add "High contrast" theme, with dark/light mode
 - Add support for "CONVOS_REQUEST_BASE", which is an alternative to
   the "X-Request-Base" header
 - Fix jumping to the right position in chat history #453
 - Fix edge cases for ?after= and ?before= #459
 - Fix being able to make a paste with unicode #460
 - Fix select-field styling on "Add conversation" page
 - Fix "substr outside of string at Mojo/Asset/Memory.pm line 45." warning
 - Fix rendering <Fallback/> pages
 - Fix loading PWA assets in <head>